# MightyPie-Revamped

./: .env  .env.public  .gitignore  MIT-LICENSE  PRODUCTION_SETUP.md  README.md  package.json  pnpm-lock.yaml  vite.config.js
assets/: KeyboardShortcutButton-ValidKeys.md
scripts/: dev-launcher.js  nats.conf  nats_custom_start.ps1  nats_launch_helper.bat  run_go_workers.ps1  universal-launcher.js
src/: app.css  app.html
src-go/: README.md  build.bat  dev-build.bat  go.mod  go.sum
src-go/cmd/: envHandler.go
src-go/cmd/buttonManager/: worker.go
src-go/cmd/inputDetector/: worker.go
src-go/src/: whatAmI.go
src-tauri/: .gitignore  Cargo.toml  build.rs  installer-hooks.nsh  tauri.conf.json
src-tauri/assets/data/: buttonFunctions.json  defaultSettings.json  defaultWindowExclusionList.json
src-tauri/assets/nats-server/: nats.conf
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/licenses/: THIRD_PARTY_NOTICES.md
src-tauri/licenses/texts/: BSD-3-Clause_license.txt
src-tauri/src/: admin.rs  autostart.rs  env_utils.rs  file_fetch_utils.rs  launcher.rs  lib.rs  logging.rs  main.rs  mouse.rs  nats_config.rs  nats_token.rs  port_checker.rs  shutdown.rs  task_scheduler.rs
src/lib/: autostartUtils.ts  colorUtils.ts  env.ts  envHandler.ts  fileAccessUtils.ts  generalUtil.ts  logger.ts  mouseFunctions.ts  natsAdapter.svelte.ts  natsAdapter.ts  natsSubjects.ts  windowUtils.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
static/data/: buttonFunctions.json  defaultSettings.json  defaultWindowExclusionList.json
(+152 files in other folders)
