[package]
name = "MightyPieRevamped"
version = "1.1.0"
description = "Second iteration of a Window Switcher (and more) as a Pie / Radial Menu"
authors = ["rayzorblade23"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mightypie_revamped_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1"


[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-opener = "2"
tauri-plugin-prevent-default = "2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
log = "0.4"
env_logger = "0.10"
tauri-plugin-dialog = "2"
chrono = "0.4"
lazy_static = "1.4"
base64 = "0.22.1"
rand = "0.8"
once_cell = "1.18"
url = "2.4"
regex = "1.9"
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }


[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-positioner = "2"
